# crawlconsole

./: .gitignore  README.md  debug_scrape.py  pyproject.toml  reproduce_hang.py  run.py  test_stripping.py
app/: ai_extract.py  crawler.py  db.py  loop_setup.py  main.py  models.py
app/api/: router.py
app/api/endpoints/: agent.py  crawl.py  map.py  metadata.py  scrape.py  search.py
app/features/agent/: service.py
app/features/crawl/: service.py
app/features/map/: service.py
app/features/scrape/: service.py
app/features/search/: service.py
app/models/: api.py
app/services/: ai.py  crawl.py  crawler.py  map.py  scrape.py  scraper.py  search.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js
app/static/js/modules/: api.js  config.js  utils.js
